--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
             "email": "service@newphper.com"
         }
     ],
+    "license": "Apache-2.0",
     "require": {
         "topthink/framework": "^6.0.0"
     },
