--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "license": "Apache-2.0",
     "require": {
-        "topthink/framework": "^6.0.0"
+        "topthink/framework": "^6.0.0",
+        "lunzi/tp-sms": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
